25 Despliegue/kubernetes-azure/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
  labels:
    app: backend1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
        - name: backend1-pod
          image: cursodockerk8s01.azurecr.io/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3010
            initialDelaySeconds: 20
            periodSeconds: 1800
          resources:
            requests:
              memory: "128M"
              cpu: 0.2
