25 Despliegue/kubernetes-azure/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2-pod
          image: cursodockerk8s01.azurecr.io/backend2
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3020
            initialDelaySeconds: 20
            periodSeconds: 1800
          resources:
            requests:
              memory: "128M"
              cpu: 0.2
